--- a/views/mail.ejs
+++ b/views/mail.ejs
@@ -3,11 +3,8 @@
 <html lang="en">
 <head>
   <title>
-    <% if (subject) { %>
-      <%= subject %>
-    <% } else { %>
-      Not found!
-    <% } %></title>
+    <%= (subject || 'Not found!') %>
+  </title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/themes/less/bootstrap.css">
@@ -16,10 +13,9 @@
 </head>
 
 <body>
-  <div id="mail">
+  <div id="mail" class="container">
+    <h1><%= (subject || 'Mail not found!') %></h1>
 <% if (subject) { %>
-    <h1><%= subject %></h1>
-    <div class="container">
       <div class="widget-box">
         <div class="widget-title">
           <ul>
@@ -30,14 +26,13 @@
         <div class="widget-content">
           <%- body %>
         </div>
-    </div>
-<% } else { %>
-    <h1>Mail not found!</h1>
+      </div>
 <% } %>
     <div class="pull-right">
       <button class="btn btn-primary" onclick="window.close();">
         <i class="icon-off"></i> Close
       </button>
+    </div>
   </div>
 
   <script src="/themes/js/bootstrap.min.js" type="text/javascript"></script>
