--- a/public/themes/style/delta.main.css
+++ b/public/themes/style/delta.main.css
@@ -1448,3 +1448,12 @@ form {
 #build-repos-list li {
   font-size: small;
 }
+
+#task-details-modal {
+  width: 1000px;
+  margin-left: -500px;
+}
+
+#task-details-modal .modal-body {
+  max-height: 800px;
+}
