--- a/public/themes/style/smart_wizard_vertical_custom.css
+++ b/public/themes/style/smart_wizard_vertical_custom.css
@@ -27,7 +27,7 @@
   height:300px;
 }
 
-.swMain .stepContainer div.content {
+.swMain .stepContainer iframe {
   display:block;
   position: absolute;  
   float:left;
@@ -42,26 +42,11 @@
   overflow:auto;    
   z-index:88; 
   -webkit-border-radius: 5px;
-  -moz-border-radius  : 5px;
+  border-radius: 5px;
   width:720px;
   clear:both;
 }
 
-.swMain .stepContainer .StepTitle {
-  display:block;
-  position: relative;
-  margin:0;   
-  border:1px solid #E0E0E0;
-  padding:5px;   
-  font: bold 16px Verdana, Arial, Helvetica, sans-serif; 
-  color:#5A5655;   
-  background-color:#E0E0E0;
-  clear:both;
-  text-align:left; 
-  z-index:88;
-  -webkit-border-radius: 5px;
-  -moz-border-radius  : 5px;    
-}
 .swMain ul.anchor {
   position: relative;
   display:block;
@@ -188,7 +173,7 @@
   font: bold 13px Verdana, Arial, Helvetica, sans-serif; 
   color:#5A5655;       
   background: #FFF url(../images/loader.gif) no-repeat 5px;  
-  -moz-border-radius  : 5px;
+  border-radius: 5px;
   -webkit-border-radius: 5px;
   z-index:998;
 }
